# mocasa

./: .gitignore  Cargo.toml  README.md
cfg/: example.toml  local.toml  local2.toml
phenet/ex1/: mocasa_config.toml  phenet_sample_config.cfg  phenet_sample_opts
phenet/ex2/: mocasa_config.toml  mocasa_params  phenet_config1.cfg  phenet_config2.cfg  phenet_opts
sh/: classify_multi_qsub.sh  classify_qsub.sh  install.sh  mocasa_qsub.sh  train_qsub.sh
src/: check.rs  classify.rs  data.rs  error.rs  example.rs  import.rs  lib.rs  main.rs  math.rs  mcmc.rs  observables.rs  options.rs  params.rs  phenet.rs  report.rs  sample.rs  train.rs  util.rs
src/classify/: exact.rs  tracer.rs  worker.rs
src/data/: gwas.rs
src/math/: lineq.rs  matrix.rs  skip_stats.rs  snapped_stats.rs  stats.rs  trident.rs  wootz.rs
src/mcmc/: metro.rs
src/options/: action.rs  check_pre.rs  cli.rs  config.rs
src/params/: transform.rs
src/sample/: gibbs.rs  sampler.rs  trace_file.rs  var_stats.rs  vars.rs
src/train/: gibbs.rs  initial_params.rs  model.rs  param_eval.rs  param_meta_stats.rs  param_stats.rs  params.rs  sampler.rs  trace_file.rs  var_stats.rs  var_trace.rs  vars.rs  worker.rs
src/util/: duration_format.rs  files.rs  joiner.rs  nan_check.rs  sym_matrix.rs  threads.rs
