[package]
name = "mocasa"
description = "A Monte Carlo sampler"
version = "0.1.1"
edition = "2021"
authors = ["Oliver Ruebenacker <oliverr@broadinstitute.org>"]
readme = "README.md"
repository = "https://github.com/broadinstitute/mocasa"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
clap = { version = "4.5.11", features = ["cargo"] }
serde = { version = "1.0.204", features = ["derive", "rc"] }
serde_json = "1.0.121"
toml = "0.8.17"