[package]
name = "mocasa"
description = "A Monte Carlo sampler"
version = "0.2.0"
edition = "2021"
authors = ["Oliver Ruebenacker <oliverr@broadinstitute.org>"]
readme = "README.md"
repository = "https://github.com/broadinstitute/mocasa"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
clap = { version = "4.5.13", features = ["cargo"] }
serde = { version = "1.0.204", features = ["derive", "rc"] }
serde_json = "1.0.122"
toml = "0.8.19"
log = "0.4.22"
simplelog = "0.12.2"